# plotlib

./: .gitignore  .travis.yml  CHANGELOG  Cargo.toml  LICENSE  README.md  README.rst  release.sh  rusty-tags.vi
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
examples/: barchart_svg.rs  boxplot_svg.rs  function_svg.rs  histogram_svg.rs  histogram_text.rs  letter_counter.rs  line_and_point_svg.rs  line_svg.rs  line_text.rs  multi_view_svg.rs  scatter_svg.rs  scatter_text.rs  vector_svg.rs  with_grid.rs
src/: axis.rs  barchart.rs  boxplot.rs  errors.rs  function.rs  grid.rs  histogram.rs  lib.rs  line.rs  page.rs  plot.rs  render.rs  representation.rs  save.rs  scatter.rs  style.rs  svg_render.rs  text_render.rs  utils.rs  view.rs
src/repr/: barchart.rs  boxplot.rs  function.rs  histogram.rs  line.rs  mod.rs  plot.rs  scatter.rs  style.rs  vector.rs
tests/: test_no_data.rs
