[package]
name = "plotlib"
version = "0.3.0"
authors = ["Matt Williams <matt@milliams.com>"]
description = "Pure Rust plotting library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/milliams/plotlib"
categories = ["visualization", "science"]
keywords = ["plotting", "plot", "graph", "chart", "histogram", "scatter"]

[badges]
travis-ci = { repository = "milliams/plotlib" }

[dependencies]
svg = "0.5.11"
failure = "0.1.2"
