[package]
name = "plotlib"
version = "0.5.1"
authors = ["Matt Williams <matt@milliams.com>"]
description = "Pure Rust plotting library"
readme = "README.md"
license = "MIT"
edition = "2018"
repository = "https://github.com/milliams/plotlib"
categories = ["visualization", "science"]
keywords = ["plotting", "plot", "graph", "chart", "histogram"]

[badges]
travis-ci = { repository = "milliams/plotlib" }

[dependencies]
svg = "0.7.1"
failure = "0.1.7"
