[package]
name = "plotlib"
version = "0.5.1"
authors = ["Matt Williams <matt@milliams.com>"]
description = "Pure Rust plotting library"
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/milliams/plotlib"
categories = ["visualization", "science"]
keywords = ["plotting", "plot", "graph", "chart", "histogram"]

[dependencies]
svg = "0.10.0"
thiserror = "1.0.30"
